Building the lab exercise --> transition_funciton

--- a/Dynamic_Programming/policy_iteration_lab.ipynb
+++ b/Dynamic_Programming/policy_iteration_lab.ipynb
@@ -829,19 +829,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "id": "8103eb42",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "from value_iteration import value_iteration"
+    "from value_iteration import value_iteration\n",
+    "import random"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "id": "7f92d2bb",
    "metadata": {},
    "outputs": [],
@@ -861,6 +862,41 @@
     "reward = {s: 1 if s == 100 else 0 for s in states}\n",
     "# Probability of heads\n",
     "p_h = 0.55"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b89b042f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Crear la transition_function (que no es determinista)\n",
+    "def transition_function(s, a):\n",
+    "    if (s + a) != 100:\n",
+    "        return [(s + a, 0, p_h), (s - a, 0, 1 - p_h)]\n",
+    "    else:\n",
+    "        return [(s + a, 1, p_h), (s - a, 0, 1 - p_h)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "79df861f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteración número 1.\n",
+      "Policy Evaluation converged in 1 iterations.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Ejecutar\n",
+    "policy, V = value_iteration(states, actions, transition_function)"
    ]
   }
  ],
