Creating monte carlo control method for epsilon-soft policy

--- a/Monte_Carlo_Methods/monte_carlo_lab.ipynb
+++ b/Monte_Carlo_Methods/monte_carlo_lab.ipynb
@@ -18,7 +18,7 @@
    "id": "0e8eac83",
    "metadata": {},
    "source": [
-    "# Blackjack\n",
+    "## Blackjack\n",
     "\n",
     "The object of the popular casino card game of *blackjack* is to obtain cards the sum of whose numerical values is as great as possible without exceeding 21. All face cards count as 10, and an ace can count either as 1 or as 11. The game begins with two cards dealt to both dealer and player. One of the dealer’s cards is face up and the other is face down. If the player has 21 immediately (an ace and a 10-card), it is called a natural. He then wins unless the dealer also has a natural, in which case the game is a draw. If the player does not have a natural, then he can request additional cards, one by one (hits), until he either stops (sticks) or exceeds 21 (goes bust). If he goe bust, he loses; if he sticks, then it becomes the dealer’s turn. The dealer hits or sticks according to a fixed strategy without choice: he sticks on any sum of 17 or greater, and hits otherwise. If the dealer goes bust, then the player wins; otherwise, the outcome—win, lose, or draw—is determined by whose final sum is closer to 21.\n",
     "\n",
@@ -565,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "1b8290cc",
    "metadata": {},
    "outputs": [],
@@ -696,25 +696,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "id": "2d7fc746",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "generate_episode_es_blackjack.<locals>.policy_dealer() missing 1 required positional argument: 'dealer_usable_ace'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[26]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m Q, policy = \u001b[43mmc_control_es\u001b[49m\u001b[43m(\u001b[49m\u001b[43mstates\u001b[49m\u001b[43m=\u001b[49m\u001b[43mstates\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m      2\u001b[39m \u001b[43m              \u001b[49m\u001b[43mactions\u001b[49m\u001b[43m=\u001b[49m\u001b[43mactions\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m      3\u001b[39m \u001b[43m              \u001b[49m\u001b[43mgenerate_episode_es_fn\u001b[49m\u001b[43m=\u001b[49m\u001b[43mgenerate_episode_es_blackjack\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m      4\u001b[39m \u001b[43m              \u001b[49m\u001b[43mnum_episodes\u001b[49m\u001b[43m=\u001b[49m\u001b[32;43m100000\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\Usuario\\Documents\\Reinforcement-Learning\\Monte_Carlo_Methods\\MC_methods.py:137\u001b[39m, in \u001b[36mmc_control_es\u001b[39m\u001b[34m(states, actions, generate_episode_es_fn, policy, num_episodes, gamma)\u001b[39m\n\u001b[32m    135\u001b[39m a0 = np.random.choice(actions[s])\n\u001b[32m    136\u001b[39m \u001b[38;5;66;03m# Generamos el episodio --> [(s0, a0, r1), (s1, a1, r2), ..., (sT-1, aT-1, rT)]\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m137\u001b[39m episode = \u001b[43mgenerate_episode_es_fn\u001b[49m\u001b[43m(\u001b[49m\u001b[43ms0\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43ma0\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mpolicy\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    138\u001b[39m \u001b[38;5;66;03m# Inicializamos G\u001b[39;00m\n\u001b[32m    139\u001b[39m G = \u001b[32m0\u001b[39m\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[25]\u001b[39m\u001b[32m, line 67\u001b[39m, in \u001b[36mgenerate_episode_es_blackjack\u001b[39m\u001b[34m(initial_state, initial_action, policy)\u001b[39m\n\u001b[32m     65\u001b[39m     episodio.append((initial_state, initial_action, \u001b[32m0\u001b[39m))\n\u001b[32m     66\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m---> \u001b[39m\u001b[32m67\u001b[39m     total_sum_dealer = \u001b[43mpolicy_dealer\u001b[49m\u001b[43m(\u001b[49m\u001b[43msum_dealer\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdealer_usable_ace\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     68\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m total_sum_dealer > \u001b[32m21\u001b[39m:\n\u001b[32m     69\u001b[39m         reward = \u001b[32m1\u001b[39m\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[25]\u001b[39m\u001b[32m, line 46\u001b[39m, in \u001b[36mgenerate_episode_es_blackjack.<locals>.policy_dealer\u001b[39m\u001b[34m(sum_dealer, dealer_usable_ace)\u001b[39m\n\u001b[32m     44\u001b[39m \u001b[38;5;28;01melif\u001b[39;00m (sum_dealer + card > \u001b[32m21\u001b[39m) \u001b[38;5;129;01mand\u001b[39;00m (dealer_usable_ace == \u001b[38;5;28;01mFalse\u001b[39;00m):\n\u001b[32m     45\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m sum_dealer + card\n\u001b[32m---> \u001b[39m\u001b[32m46\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mpolicy_dealer\u001b[49m\u001b[43m(\u001b[49m\u001b[43msum_dealer\u001b[49m\u001b[43m \u001b[49m\u001b[43m+\u001b[49m\u001b[43m \u001b[49m\u001b[43mcard\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[31mTypeError\u001b[39m: generate_episode_es_blackjack.<locals>.policy_dealer() missing 1 required positional argument: 'dealer_usable_ace'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "Q, policy = mc_control_es(states=states,\n",
     "              actions=actions,\n",
@@ -724,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 29,
    "id": "e2395de8",
    "metadata": {},
    "outputs": [
@@ -736,11 +721,11 @@
        " (12, 2, True): 'hits',\n",
        " (12, 2, False): 'hits',\n",
        " (12, 3, True): 'hits',\n",
-       " (12, 3, False): 'hits',\n",
+       " (12, 3, False): 'sticks',\n",
        " (12, 4, True): 'hits',\n",
        " (12, 4, False): 'hits',\n",
        " (12, 5, True): 'hits',\n",
-       " (12, 5, False): 'hits',\n",
+       " (12, 5, False): 'sticks',\n",
        " (12, 6, True): 'hits',\n",
        " (12, 6, False): 'hits',\n",
        " (12, 7, True): 'hits',\n",
@@ -756,13 +741,13 @@
        " (13, 2, True): 'hits',\n",
        " (13, 2, False): 'hits',\n",
        " (13, 3, True): 'hits',\n",
-       " (13, 3, False): 'hits',\n",
+       " (13, 3, False): 'sticks',\n",
        " (13, 4, True): 'hits',\n",
        " (13, 4, False): 'hits',\n",
        " (13, 5, True): 'hits',\n",
        " (13, 5, False): 'sticks',\n",
        " (13, 6, True): 'hits',\n",
-       " (13, 6, False): 'hits',\n",
+       " (13, 6, False): 'sticks',\n",
        " (13, 7, True): 'hits',\n",
        " (13, 7, False): 'hits',\n",
        " (13, 8, True): 'hits',\n",
@@ -772,17 +757,17 @@
        " (13, 10, True): 'hits',\n",
        " (13, 10, False): 'hits',\n",
        " (14, 1, True): 'hits',\n",
-       " (14, 1, False): 'sticks',\n",
+       " (14, 1, False): 'hits',\n",
        " (14, 2, True): 'hits',\n",
-       " (14, 2, False): 'hits',\n",
+       " (14, 2, False): 'sticks',\n",
        " (14, 3, True): 'hits',\n",
-       " (14, 3, False): 'hits',\n",
+       " (14, 3, False): 'sticks',\n",
        " (14, 4, True): 'hits',\n",
-       " (14, 4, False): 'hits',\n",
+       " (14, 4, False): 'sticks',\n",
        " (14, 5, True): 'hits',\n",
        " (14, 5, False): 'sticks',\n",
        " (14, 6, True): 'hits',\n",
-       " (14, 6, False): 'hits',\n",
+       " (14, 6, False): 'sticks',\n",
        " (14, 7, True): 'hits',\n",
        " (14, 7, False): 'hits',\n",
        " (14, 8, True): 'hits',\n",
@@ -792,7 +777,7 @@
        " (14, 10, True): 'hits',\n",
        " (14, 10, False): 'hits',\n",
        " (15, 1, True): 'hits',\n",
-       " (15, 1, False): 'sticks',\n",
+       " (15, 1, False): 'hits',\n",
        " (15, 2, True): 'hits',\n",
        " (15, 2, False): 'sticks',\n",
        " (15, 3, True): 'hits',\n",
@@ -806,13 +791,13 @@
        " (15, 7, True): 'hits',\n",
        " (15, 7, False): 'hits',\n",
        " (15, 8, True): 'hits',\n",
-       " (15, 8, False): 'hits',\n",
+       " (15, 8, False): 'sticks',\n",
        " (15, 9, True): 'hits',\n",
        " (15, 9, False): 'hits',\n",
        " (15, 10, True): 'hits',\n",
-       " (15, 10, False): 'hits',\n",
-       " (16, 1, True): 'sticks',\n",
-       " (16, 1, False): 'sticks',\n",
+       " (15, 10, False): 'sticks',\n",
+       " (16, 1, True): 'hits',\n",
+       " (16, 1, False): 'hits',\n",
        " (16, 2, True): 'hits',\n",
        " (16, 2, False): 'sticks',\n",
        " (16, 3, True): 'hits',\n",
@@ -824,24 +809,24 @@
        " (16, 6, True): 'hits',\n",
        " (16, 6, False): 'sticks',\n",
        " (16, 7, True): 'hits',\n",
-       " (16, 7, False): 'sticks',\n",
+       " (16, 7, False): 'hits',\n",
        " (16, 8, True): 'hits',\n",
        " (16, 8, False): 'hits',\n",
        " (16, 9, True): 'hits',\n",
        " (16, 9, False): 'sticks',\n",
        " (16, 10, True): 'hits',\n",
-       " (16, 10, False): 'hits',\n",
+       " (16, 10, False): 'sticks',\n",
        " (17, 1, True): 'hits',\n",
        " (17, 1, False): 'sticks',\n",
-       " (17, 2, True): 'sticks',\n",
+       " (17, 2, True): 'hits',\n",
        " (17, 2, False): 'sticks',\n",
        " (17, 3, True): 'hits',\n",
        " (17, 3, False): 'sticks',\n",
        " (17, 4, True): 'hits',\n",
        " (17, 4, False): 'sticks',\n",
-       " (17, 5, True): 'sticks',\n",
+       " (17, 5, True): 'hits',\n",
        " (17, 5, False): 'sticks',\n",
-       " (17, 6, True): 'sticks',\n",
+       " (17, 6, True): 'hits',\n",
        " (17, 6, False): 'sticks',\n",
        " (17, 7, True): 'hits',\n",
        " (17, 7, False): 'sticks',\n",
@@ -855,9 +840,9 @@
        " (18, 1, False): 'sticks',\n",
        " (18, 2, True): 'sticks',\n",
        " (18, 2, False): 'sticks',\n",
-       " (18, 3, True): 'sticks',\n",
+       " (18, 3, True): 'hits',\n",
        " (18, 3, False): 'sticks',\n",
-       " (18, 4, True): 'sticks',\n",
+       " (18, 4, True): 'hits',\n",
        " (18, 4, False): 'sticks',\n",
        " (18, 5, True): 'sticks',\n",
        " (18, 5, False): 'sticks',\n",
@@ -867,9 +852,9 @@
        " (18, 7, False): 'sticks',\n",
        " (18, 8, True): 'sticks',\n",
        " (18, 8, False): 'sticks',\n",
-       " (18, 9, True): 'sticks',\n",
+       " (18, 9, True): 'hits',\n",
        " (18, 9, False): 'sticks',\n",
-       " (18, 10, True): 'sticks',\n",
+       " (18, 10, True): 'hits',\n",
        " (18, 10, False): 'sticks',\n",
        " (19, 1, True): 'sticks',\n",
        " (19, 1, False): 'sticks',\n",
@@ -933,7 +918,7 @@
        " (21, 10, False): 'sticks'}"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
